--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,7 @@ celerybeat-schedule
 
 # Environments
 .env
+.flaskenv
 .venv
 env/
 venv/
@@ -113,3 +114,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/.idea/
+/notes/upload/*
